Closed Bug 586808 Opened 15 years ago Closed 15 years ago

Incubator embedding: MozView crashes on destroy if page is not loaded [@ WebBrowserChrome::OnStateChange]

Categories

(Core Graveyard :: Embedding: APIs, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tatiana, Assigned: tatiana)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.8) Gecko/20100723 Ubuntu/10.04 (lucid) Firefox/3.6.8 Build Identifier: PRECONDITIONS: build testqmozembed disconnect from network STEPS LEADING TO PROBLEM: press Exit EXPECTED OUTCOME: app close without crash ACTUAL OUTCOME: crash Reproducible: Always
Attached file backtrace
Attached patch patch (obsolete) — Splinter Review
Attachment #465430 - Flags: review?(mark.finkle)
Attachment #465430 - Flags: feedback?(romaxa)
Depends on: 583546
Keywords: crash
OS: Linux → Windows CE
Summary: Incubator embedding: MozView crashes on destroy if page is not loaded → Incubator embedding: MozView crashes on destroy if page is not loaded [@ WebBrowserChrome::OnStateChange]
Severity: normal → critical
OS: Windows CE → Linux
Comment on attachment 465430 [details] [diff] [review] patch Both TabChild and GTK EmbedPrivate do this too.
Attachment #465430 - Flags: review?(mark.finkle) → review+
Whiteboard: [embed-checkin-needed]
Comment on attachment 465430 [details] [diff] [review] patch It looks like this not very good place for this disconnect... I would like to create some MozView::DestroyBrowser function, or move this disconnect into mPrivate destructor
Attachment #465430 - Flags: feedback?(romaxa) → feedback-
Attached patch patchSplinter Review
moved disconnect into mPrivate destructor
Assignee: nobody → tanya.meshkova
Attachment #465430 - Attachment is obsolete: true
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #466490 - Flags: review?(mark.finkle)
Attachment #466490 - Flags: feedback?(romaxa)
Comment on attachment 466490 [details] [diff] [review] patch I like this version more
Attachment #466490 - Flags: feedback?(romaxa) → feedback+
Attachment #466490 - Flags: review?(mark.finkle) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [embed-checkin-needed]
Crash Signature: [@ WebBrowserChrome::OnStateChange]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: