Bug 586808 - Incubator embedding: MozView crashes on destroy if page is not loaded [@ WebBrowserChrome::OnStateChange]. r=mark.finkle